Added navigation, LoginFilter, fixed redirect bug.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-# jsf.primefaces.theme=bootstrap
-jsf.primefaces.theme=rocket
+#joinfaces.primefaces.theme=bootstrap
+#joinfaces.primefaces.theme=rocket
