--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
+#server.port=8081
+
 #joinfaces.primefaces.theme=bootstrap
 #joinfaces.primefaces.theme=rocket
+
+## by default these h2 properties habe been configured 
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+## if we want to change from in memory to file based
+#spring.datasource.url=jdbc:h2:file:/data/demo
