added h2 in memory user authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,17 @@
 #joinfaces.primefaces.theme=bootstrap
 #joinfaces.primefaces.theme=rocket
 
-## by default these h2 properties habe been configured 
+## by default these h2 properties have been configured 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.datasource.password=password
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#create, create-drop, validate, and update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
 
 ## if we want to change from in memory to file based
 #spring.datasource.url=jdbc:h2:file:/data/demo
