Added english and german locale support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 
 #joinfaces.primefaces.theme=bootstrap
 #joinfaces.primefaces.theme=rocket
+joinfaces.jsf.facelets-skip-comments=true
 
 ## by default these h2 properties have been configured 
 #spring.datasource.url=jdbc:h2:mem:testdb
