--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.jpa.show-sql=true
 
 ## if we want to change from in memory to file based
 #spring.datasource.url=jdbc:h2:file:/data/demo
+
+logging.file.name=./logs/app.log
